2013-02-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (GPG_DO_DISCRETIONARY, cmp_discretionary): New.
	(cmp_app_data): Change to factor out GPG_DO_DISCRETIONARY.
	(gpg_do_table): Add GPG_DO_DISCRETIONARY.

2013-02-15  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.2.
	* src/usb_desc.c (gnukStringSerial): Updated.

2013-02-14  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/002_get_data_static.feature: Value of extended
	capabilities changed.
	* test/features/402_get_data_static.feature: Ditto.
	* test/features/802_get_data_static.feature: Ditto.

	* src/openpgp.c (cmd_write_binary): Move erasing page of update
	keys to...
	(modify_binary): ...here.

	* src/flash.c (flash_write_binary): Handle removal of update keys.

2013-02-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_get_challenge): Handle Le field.

	* src/openpgp-do.c (extended_capabilities): Fix for GET CHALLENGE.

	* src/gnuk.h (CHALLENGE_LEN): Moved here (was: openpgp.c).

	* tool/gnuk_token.py (iso7816_compose): Add Le field.

2013-01-30  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_external_authenticate): Fix off-by-one error.

	* tool/gnuk_token.py (gnuk_token.cmd_external_authenticate): Add
	KEYNO to the arguments.

	* tool/upgrade_by_passwd.py (main): Explicitly say it's KEYNO.

2013-01-28  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_pw_get_retry_counter): New.
	* src/openpgp.c (cmd_verify): Implement VERIFY with empty data.

2013-01-22  Niibe Yutaka  <gniibe@fsij.org>

	* tool/pinpadtest.py (Card.cmd_vega_alpha_disable_empty_verify):
	New.
	(main): call cmd_vega_alpha_disable_empty_verify if it's
	COVADIS_VEGA_ALPHA.

2013-01-21  Niibe Yutaka  <gniibe@fsij.org>

	* tool/pageant_proxy_to_gpg.py: New.
	* tool/sexp.py: New.

2013-01-20  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gpg_agent.py: New.

2013-01-11  Niibe Yutaka  <gniibe@fsij.org>

	* tool/pinpadtest.py: Add fixed length input.

2012-12-25  Niibe Yutaka  <gniibe@fsij.org>

	* tool/rsa.py: New.
